SPIRV: Alignment in decorations and memory accesses